Name:                Etage-Graph
Version:             0.1
Synopsis:            A data-flow based graph algorithms
Description:         A data-flow based graph algorithms.
License:             LGPL-3
License-file:        LICENSE
Author:              Mitar Milutinovic
Maintainer:          mitar.haskell@tnode.com
Copyright:           (c) 2011 Mitar Milutinovic
Category:            Data Structures
Build-type:          Simple
Cabal-version:       >= 1.8
Stability:           experimental
Homepage:            http://mitar.tnode.com

Library
  Exposed-modules:     Data.Graph.Etage
  Build-depends:       base >= 4.3 && < 5,
                       Etage >= 0.1.8 && < 0.2,
                       fgl >= 5.4.2 && < 5.5,
                       mtl >= 2.0 && < 3,
                       containers >= 0.4 && < 1
  HS-source-dirs:      lib
  GHC-options:         -Wall
  GHC-prof-options:    -Wall
  GHC-shared-options:  -Wall

Executable test
  Main-is:             Test.hs
  HS-source-dirs:      src
  Build-depends:       base >= 4.3 && < 5,
                       fgl >= 5.4.2 && < 5.5,
                       random >= 1.0 && < 2,
                       containers >= 0.4 && < 1,
                       deepseq >= 1.1 && < 2,
                       array >= 0.3 && < 1,
                       time >= 1.1 && < 2,
                       Etage == 0.1.8,
                       Etage-Graph == 0.1
  GHC-options:         -Wall -rtsopts -threaded
